src/test/deca/context/invalid/provided/new_sur_int.deca
//Resultats :
//Erreur contextuelle
//Ligne 4: new is used on classes
{int x = new int();}
